<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AutoApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="american_eagle_auto_body">American Eagle Auto Body</string>
    <string name="discounts_and_gifts">Discounts And Gifts</string>
    <string name="share_our_work_on_facebook">Share our work on Facebook</string>
    <string name="please_enter_your_phone_number_">"Please enter your Phone Number "</string>
    <string name="submit">SUBMIT</string>
    <string name="please_share_the_following_post_on_your_facebook_profile">Please share the following post on your Facebook profile</string>
    <string name="companyLink">Just got My Car dent fixed at &lt;br&#47;&gt;
	       						 &lt;a href=\&quot;http://www.aeautobody.com\&quot;&gt;American Eagle Auto body Centre. &lt;/a> &lt;br&#47;&gt;They did a greate job. I strongly recommend them. </string>
    <string name="click_to_share">CLICK TO SHARE</string>
    <string name="location_of_american_eagle_auto_body">Location of American Eagle Auto Body</string>
    <string name="congratulations_">CONGRATULATIONS!!!</string>
    <string name="please_show_this_messege_to_redeem_your_giftp_or_discount">Please Show This Messege To Redeem Your Giftp or Discount</string>
    <string name="_5_">5%</string>
    <string name="car_dent">Car Dent</string>
    <string name="take_photos">Take Photos</string>
    <string name="take_multiple_photos_of_your_car_dents">Take multiple photos of your Car Dents.</string>
    <string name="vehicle_make">Vehicle Make</string>
    <string name="btrief_description_of_the_issue_optional_">Brief description of the issue(optional)</string>
    <string name="damaged_car_pars">Damaged Car Parts</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="enter_form">Enter Form</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="call_us_to_schedule_an_appointment">Call Us to Schedule An Appointment</string>
    <string name="book_an_appointment">Book An Appointment</string>
    <string name="view_our_gallery">View Our Gallery</string>
    <string name="about_americal_eagle_auto_body">About Americal Eagle Auto Body</string>
    <string name="for_over_25_years_american_eagle_auto_body_owner_rooben_mirzaians_have_been_serving_the_community_with_excellent_service_and_a_smile_dedicated_to_service_you_receive_the_personal_attention_you_need_you_want_and_you_deserve_our_staff_is_trained_and_knowledgeable_and_will_help_you_through_every_step_of_the_process_to_get_your_car_looking_like_new_again_serving_los_angeles_hollywood_glendale_silverlake_atwater_village_">For over 25 Years American Eagle Auto Body &amp; Owner Rooben Mirzaians have been serving the community with excellent service and a smile!\nDedicated to service, you receive the personal attention you need, you want, and you deserve.\nOur staff is trained and knowledgeable and will help you through every step of the process to get your car looking like new again. Serving Los Angeles, Hollywood, Glendale, Silverlake, Atwater Village,</string>
    <string name="our_location">Our Location</string>
    <string name="title_activity_contact_us">ContactUs</string>
    <string name="about_us">About Us</string>
    <string name="title_activity_about_us">AboutUs</string>

</resources>
