<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/please_share_the_following_post_on_your_facebook_profile"
        android:textSize="20sp"/>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <ImageView 
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:id="@+id/before"
            android:layout_weight="1"
            android:paddingRight="5dp"
            android:src="@drawable/before"/>
         <ImageView 
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:id="@+id/after"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:src="@drawable/after"/>
        
    </LinearLayout>
    <TextView 
        android:layout_margin="10dp"
        android:id="@+id/companylink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:textSize="18sp"
        android:text="@string/companyLink"/>
    
    
   <TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/map"
       android:text="@string/location_of_american_eagle_auto_body"
      />
   <RelativeLayout 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       >
   <Button 
        android:id="@+id/share"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      android:text="@string/click_to_share"
      android:layout_centerHorizontal="true"/>
   
    </RelativeLayout>

</LinearLayout>
