<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/photo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/cam" />
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginLeft="5dp">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_photos"
        android:textColor="#000000"
        android:textSize="25sp" />
 
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_multiple_photos_of_your_car_dents"
        android:textColor="#000000"
        android:textSize="15sp" />

    </LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        >
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/vehicle_make"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/vehicle_make"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content" 
            android:background="@color/white"/>
        
    </LinearLayout>
      <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
        >
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/vehicle_model"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText 
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:id="@+id/vehicle_model"
            android:background="@color/white"/>
        
    </LinearLayout>
      <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
        >
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="5"
            android:text="@string/damaged_car_pars"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/carparts"
            android:layout_weight="5"
            android:background="@color/white"/>
        
    </LinearLayout>
      <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
        >

          <TextView
            
              android:layout_width="0dp"
              android:layout_height="fill_parent"
              android:layout_marginRight="10dp"
              android:layout_weight="5"
              android:text="@string/btrief_description_of_the_issue_optional_"
              android:textColor="#000000"
              android:textSize="20sp" />

        <EditText 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/vehicle_make"
            android:layout_weight="5"
            android:lines="4"
            android:background="@color/white"/>
      
        
    </LinearLayout>
   <RelativeLayout 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp">
	  
        <Button 
	    android:id="@+id/submit"
	    android:layout_width="80dp"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:text="@string/submit"
	    android:background="#ff0000"/>
        </RelativeLayout>
</LinearLayout>
