<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:layout_marginLeft="5dp"
    android:background="@drawable/bg2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_form"
        android:textColor="#000000"
        android:textSize="25sp" />

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:text="@string/date"
                android:textColor="#000000"
                android:textSize="20sp" />

            <LinearLayout 
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_weight="6">

            <EditText
                android:id="@+id/dateView"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:hint="@string/date"
                android:layout_weight="5" />

            <Button
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/darrow" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/time"
                android:textSize="20sp" />
             <LinearLayout 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_weight="6">

            <EditText
                android:id="@+id/timeView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
               
                android:layout_weight="5"
                android:background="@color/white"
                />
            <Button
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/darrow" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:layout_marginTop="-5dp"
                android:text="@string/btrief_description_of_the_issue_optional_"
                android:textSize="20sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:lines="5"
                android:layout_gravity="top"
                android:background="@color/white"
                
                 >

                <requestFocus />
            </EditText>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_margin="30dp" 
       
        android:background="@color/blue"
        android:text="@string/submit"
        android:textColor="#ffffff"
        android:textSize="20sp" />

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="OR"
 		android:textSize="40sp" />
    </RelativeLayout>
    
	
 <LinearLayout 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     
     <ImageView 
         android:layout_width="0dp"
         android:layout_height="70dp"
         android:layout_weight="2"
         android:src="@drawable/phone"/>

     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="9"
         android:text="@string/call_us_to_schedule_an_appointment"
         android:textColor="#000000"
         android:textSize="25sp" />
      
 </LinearLayout>

</LinearLayout>
