<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg1" >
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/car"
            android:background="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/view_our_gallery"
            android:textColor="@color/white"
            android:textSize="25sp" />
        
    </LinearLayout>
    <View 
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/white"/>
        
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_height="wrap_content">
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_americal_eagle_auto_body"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_over_25_years_american_eagle_auto_body_owner_rooben_mirzaians_have_been_serving_the_community_with_excellent_service_and_a_smile_dedicated_to_service_you_receive_the_personal_attention_you_need_you_want_and_you_deserve_our_staff_is_trained_and_knowledgeable_and_will_help_you_through_every_step_of_the_process_to_get_your_car_looking_like_new_again_serving_los_angeles_hollywood_glendale_silverlake_atwater_village_"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
